fix(element): remove Space gap when child is hidden and attrs pass children (#3526)

--- a/packages/element/src/space/style.scss
+++ b/packages/element/src/space/style.scss
@@ -20,4 +20,8 @@
       align-items: baseline;
     }
   }
+
+  &-item {
+    display: contents;
+  }
 }
